methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:3: error: not found: value isOVerBaggle
  while (isOVerBaggle==false){
         ^